adicionando projetos de fundamentos

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -94,6 +94,82 @@
             </div>		
             <!-- /.portfolio -->
 
+            <!-- .portfolio -->
+            <div class="portfolio fundamentos" data-cat="fundamentos">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="/images/portfolio/todo.png" rel="portfolio" title="Lista de tarefas usando HTML, CSS e JavaScript">
+                        <img src="/images/portfolio/todo.png" alt="" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a href="https://jadsonmattos.github.io/Todo-List/" target="_blank" class="text-title">To Do List</a>
+                                <span class="text-category">Fundamentos</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+
+            <!-- .portfolio -->
+            <div class="portfolio fundamentos" data-cat="fundamentos">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="/images/portfolio/meme.png" rel="portfolio" title="Aplicação usando HTML, CSS e JAVASCRIPT onde seja possível fazer upload de imagens para criar memes.">
+                        <img src="/images/portfolio/meme.png" alt="" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a href="https://jadsonmattos.github.io/Meme-Generator/" target="_blank" class="text-title">Meme Generator</a>
+                                <span class="text-category">Fundamentos</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+
+            <!-- .portfolio -->
+            <div class="portfolio fundamentos" data-cat="fundamentos">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="/images/portfolio/color-guess.png" rel="portfolio" title="Nesta aplicação deverá ser possível jogar um jogo de adivinhação de cores.">
+                        <img src="/images/portfolio/color-guess.png" alt="" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a href="https://jadsonmattos.github.io/Color-Guess/" target="_blank" class="text-title">Color Guess</a>
+                                <span class="text-category">Fundamentos</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+
+            <!-- .portfolio -->
+            <div class="portfolio fundamentos" data-cat="fundamentos">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="/images/portfolio/carta.png" rel="portfolio" title="Dado um valor digitado em um campo de texto, as palavras terão a aparência de uma carta onde cada palavra possui uma estilização própria.">
+                        <img src="/images/portfolio/carta.png" alt="" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a href="https://jadsonmattos.github.io/Carta-Misteriosa" target="_blank" class="text-title">Carta Misteriosa</a>
+                                <span class="text-category">Fundamentos</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+
             <div class="clear"></div>
 
         </div>
