--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -52,9 +52,9 @@
 
                 </div>
 
-                <div class="blog-post more-blogs" onclick="window.open('https://seu-formulario.vercel.app', '_blank')" style="cursor: pointer;">
+                <div class="blog-post more-blogs" onclick="window.open('https://jadsonmattos.github.io/innovalive/', '_blank')" style="cursor: pointer;">
                     <div class="blog-link">
-                        <h3><a href="https://seu-formulario.vercel.app" target="_blank" style="color: white;" data-i18n="service-cta">📝 Request Detailed Quote</a></h3>
+                        <h3><a href="https://jadsonmattos.github.io/innovalive/" target="_blank" style="color: white;" data-i18n="service-cta">📝 Request Detailed Quote</a></h3>
                     </div>
                     <div class="blog-goto-link">
                         <img class="blog-arrow" src="/assets/images/right-open-mini.svg" alt="arrow"/>
