--- a/_includes/extra.html
+++ b/_includes/extra.html
@@ -49,8 +49,8 @@
                         Fill the form and I’ll get back to you in less than 24 hours.
                     </p>
 
-                    <form id="contact-form" class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-                        <input type="hidden" name="_subject" value="New contact via portfolio" />
+                    <form id="contact-form" class="contact-form" novalidate>
+                        <input type="hidden" name="subject" value="New contact via portfolio" />
                         <input type="hidden" name="language" id="contact-language" value="en" />
 
                         <div class="contact-grid">
